--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
-    "@angular/common": "^10.0.9",
-    "@angular/compiler": "^10.0.9",
-    "@angular/core": "^10.0.9",
-    "@angular/forms": "^10.0.9",
-    "@angular/platform-browser": "^10.0.9",
-    "@angular/platform-browser-dynamic": "^10.0.9",
-    "@angular/router": "^10.0.9",
-    "rxjs": "^6.6.2",
-    "tslib": "^2.0.1",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "10.1.6",
+    "@angular/cli": "10.1.7",
+    "@angular/common": "10.1.6",
+    "@angular/compiler": "10.1.6",
+    "@angular/core": "10.1.6",
+    "@angular/forms": "10.1.6",
+    "@angular/platform-browser": "10.1.6",
+    "@angular/platform-browser-dynamic": "10.1.6",
+    "@angular/router": "10.1.6",
+    "@syncfusion/ej2-angular-grids": "18.3.40",
+    "@syncfusion/ej2-buttons": "^18.3.40",
+    "@syncfusion/ej2-file-utils": "^18.3.35",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
