--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "@angular/platform-browser-dynamic": "10.1.6",
     "@angular/router": "10.1.6",
     "@syncfusion/ej2-angular-grids": "18.3.40",
+    "@syncfusion/ej2-base": "^18.3.40",
     "@syncfusion/ej2-buttons": "^18.3.40",
+    "@syncfusion/ej2-calendars": "^18.3.40",
+    "@syncfusion/ej2-dropdowns": "^18.3.40",
     "@syncfusion/ej2-file-utils": "^18.3.35",
+    "@syncfusion/ej2-inputs": "^18.3.35",
+    "@syncfusion/ej2-navigations": "^18.3.40",
+    "@syncfusion/ej2-popups": "^18.3.35",
+    "@syncfusion/ej2-splitbuttons": "^18.3.40",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
     "zone.js": "0.10.3"
